fix: shift bg color styling to body

--- a/assets/main.css
+++ b/assets/main.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: var(--font-body);
+  background-color: var(--background);
 }
 
 h1,
